fix card borders bug when dark mode

--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -1,15 +1,16 @@
 .country-card {
     width: 100%;
+    height:100%;
     background-color: var(--elements-color);
     box-shadow: var(--shadow-card);
+    color: var(--text-color);
     border-radius: 5px;
     cursor: pointer;
+    overflow: hidden;
 
     .country-flag {
         width: 100%;
         height: 200px;
-        border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
     }
 
     .country-card-body {
